--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,9 +10,9 @@
       </div>
   
       <!-- Login Form -->
-      <form>
-        <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-        <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
+      <form (ngSubmit) = "onSubmit()">
+        <input type="text" id="login" class="fadeIn second" name="email" placeholder="email" [(ngModel)]="email">
+        <input type="text" id="password" class="fadeIn third" name="password" placeholder="password" [(ngModel)]="password">
         <input type="submit" class="fadeIn fourth" value="Log In">
       </form>
   
